# artisan

./: ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  PGO.md  README.md  ROADMAP.md  SECURITY.md  TESTING.md
.github/workflows/: ci.yml  nightly.yml  release.yml
benches/: README.md  RESULTS.md  concurrent.rs  main.rs  stress.rs
crates/holt-ffi/: Cargo.toml  README.md
crates/holt-ffi/include/: holt_ffi.h
crates/holt-ffi/src/: lib.rs
docs/: benchmarks.md
examples/: basic_kv.rs  filesystem_meta.rs  s3_metadata.rs  session_store.rs
fuzz/fuzz_targets/: atomic_model.rs
src/: checkpoint.rs  lib.rs  metrics.rs
src/api/: builder.rs  config.rs  db.rs  errors.rs  mod.rs  stats.rs  tree.rs  txn.rs  view.rs
src/checkpoint/: eviction.rs  io.rs  mod.rs  round.rs
src/concurrency/: commit_gate.rs  gate.rs  maintenance_gate.rs  mod.rs
src/engine/: mod.rs  route_cache.rs  simd.rs
src/engine/walker/: erase.rs  insert.rs  lookup.rs  merge.rs  migrate.rs  mod.rs  range.rs  (+6 more)
src/journal/: codec.rs  group_commit.rs  mod.rs  reader.rs  tests.rs  txn_op.rs  writer.rs
src/layout/: blob_node.rs  leaf.rs  mod.rs  node.rs
src/store/: blob_frame.rs  buffer_manager.rs  mod.rs
tests/: bench_bg_checkpointer.rs  bench_checkpoint_sweep.rs  bench_contention_p95.rs  bench_path_put_2m.rs  checkpoint_failpoint.rs  properties.proptest-regressions  properties.rs  tree_smoke.rs  wal_round_trip.rs  wal_tree_integration.rs
tools/soak/: Cargo.toml  README.md
tools/soak/src/: main.rs
verified/: Cargo.toml  README.md  verify.sh
verified/src/: lib.rs
(+6 files in other folders)
