[package]
name = "holt-soak"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
holt = { path = "../.." }

# Keep the soak harness out of the parent workspace. It is an
# explicit storage-engine validation tool, not part of the library
# or release package.
[workspace]
members = ["."]
